add generated builds to git to ease continuous integration

--- a/.gitignore
+++ b/.gitignore
@@ -21,43 +21,35 @@ xcuserdata
 contents.xcworkspacedata
 .DS_Store
 .svn
+
+
 profile
-**/MacOSX/build
-**/iOS/build
-**/Linux/build
-**/VisualStudio2005/Debug
-**/VisualStudio2005/Release
-**/VisualStudio2008/Debug
-**/VisualStudio2008/Release
-**/VisualStudio2010/Debug
-**/VisualStudio2010/Release
-**/VisualStudio2012/Debug
-**/VisualStudio2012/Release
-**/VisualStudio2013/Debug
-**/VisualStudio2013/Release
-**/VisualStudio2013/x64
-**/VisualStudio2015/Debug
-**/VisualStudio2015/Release
-**/VisualStudio2015/x64
-**/Android/bin
-**/Android/libs
-**/Android/gen
-**/Android/obj
-**/CodeBlocks/bin
-**/CodeBlocks/obj
-**/CodeBlocks/*.depend
-**/CodeBlocks/*.layout
-**/Builds/AndroidStudio
-**/Builds/LinuxMakefile
+Builds/*
+!Builds/LinuxMakefile/
+Builds/LinuxMakefile/*
+!Builds/LinuxMakefile/Makefile
+
+!Builds/MacOSX/
+Builds/MacOSX/build/*
+
+!Builds/VisualStudio2015/
+Builds/VisualStudio2015/*
+!Builds/VisualStudio2015/LGML.sln
+!Builds/VisualStudio2015/LGML.vcxproj
+!Builds/VisualStudio2015/LGML.vcxproj.filters
+!Builds/VisualStudio2015/LGML_App.vcxproj
+!Builds/VisualStudio2015/LGML_App.vcxproj.filters
+!Builds/VisualStudio2015/icon.ico
+!Builds/VisualStudio2015/resources.rc
+
 doxygen/doc
-Builds/MacOSX
-Builds/VisualStudio2015
+
 *.password
-Builds/VisualStudio2015/Debug 32bit/
 *.stackdump
-sandbox/
+
 *.pyc
 
+sandbox/
 tmp/
 GeneratedTODOs.txt
 *.bak
