--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,10 @@
+general:
+  branches:
+    only:
+      - master
+      - develop
+      - feature/ci
+
 dependencies:
     pre:
         - sudo apt install -y python
