--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ matrix:
   # fully specify builds, include can't dynamically expand matrix entries
   # relative order of sudo and env is important so that addons: is recognized
 
-  - os: linux
-    dist: trusty
-    sudo: required
-    env: TARGET="linux"
-    cache:
-      directories:
-        - ~/Dev
-        - third_party
+  # - os: linux
+  #   dist: trusty
+  #   sudo: required
+  #   env: TARGET="linux"
+  #   cache:
+  #     directories:
+  #       - ~/Dev
+  #       - third_party
         
   #   addons:
   #     apt:
