--- a/.gitmodules
+++ b/.gitmodules
@@ -8,7 +8,7 @@
 	shallow = true
 [submodule "third_party/rubberband"]
 	path = third_party/rubberband
-	url = https://github.com/breakfastquay/rubberband.git
+	url = https://github.com/MartinHN/rubberband.git
 	shallow = true
 [submodule "third_party/VST3_SDK"]
 	path = third_party/VST3_SDK
