--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,14 +11,25 @@ jobs:
           command: |
             apt-get -qq update
             apt-get install -y git
+            apt-get install gcc-multilib
             git submodule update --init --recursive --remote
             sh Scripts/linux/installDeps.sh && sh Scripts/linux/installDevDeps.sh
       - run:
           name: build LGML
           command: |
             python Scripts/buildScript.py --build --beta --os=linux;
-
-
+      - run:
+          name: build LGML32
+          command: |
+            python Scripts/buildScript.py --build --beta --os=linux --configuration=Ubuntu32;
+      - run:
+          name: package LGML
+          command: |
+            python Scripts/buildScript.py --package --beta --exportpath=$CIRCLE_ARTIFACTS --os=linux --configuration=Ubuntu;
+      - run:
+          name: package LGML32
+          command: |
+            python Scripts/buildScript.py --package --beta --exportpath=$CIRCLE_ARTIFACTS --os=linux --configuration=Ubuntu32;
 
 general:
   branches:
