--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,8 @@ jobs:
           name: build LGML32
           command: |
             apt-get install -y g++-multilib
-            apt-get install libfreetype6:i386
+            export LGML_TARGET_ARCH=i386
+            sh Scripts/linux/installDeps.sh && sh Scripts/linux/installDevDeps.sh
             python Scripts/buildScript.py --build --beta --os=linux --configuration=Ubuntu32;
       - run:
           name: package LGML32
